--- a/report/contents/introduction.tex
+++ b/report/contents/introduction.tex
@@ -55,7 +55,7 @@ This project, apart from offering an high-performance caching library, offers tw
 \subsection{Building and analyzing resulting bytecode}
 \label{sec:building}
 
-The project can be easily built using the provided \textit{Gradle Wrapper} script \texttt{gradlew}. This script will download the required version of \textit{Gradle}, configure the project, start the build process. To do so, the following command has been used:
+The project can be easily built using the provided \href{https://docs.gradle.org/current/userguide/gradle_wrapper.html}{Gradle Wrapper} script. This script will download the required version of \textit{Gradle}, configure the project, start the build process. To do so, the following command has been used:
 
 \begin{lstlisting}[language=bash, caption={Building the Caffeine project with Gradle}]
               cd caffeine && ./gradlew build -x test -x javadoc
