--- a/report/template.sty
+++ b/report/template.sty
@@ -5,7 +5,7 @@
 \usepackage{graphicx}
 \usepackage{amsmath,amssymb}
 \usepackage{bm}
-\usepackage{xcolor}
+\usepackage{color}
 \usepackage[pdftex,bookmarks,colorlinks,breaklinks]{hyperref}
 \hypersetup{linkcolor=black, citecolor=black, filecolor=black, linktocpage}
 \usepackage{memhfixc}
@@ -18,7 +18,7 @@
 \addbibresource{references.bib}
 \usepackage{datetime}
 
-% Make colored snippets colored for Bash
+% listings settings for bash
 \lstset{
 	language=bash,            % Specify the language
 	breaklines=true,           % Enable line breaking
@@ -27,22 +27,20 @@
 	literate={-}{-}1           % Ensure dashes render correctly
 }
 
-% Make code snippets colored for Java
-\lstset{
-	language=java,
-	tabsize = 4,
-	showstringspaces = false,
-	numbers = left,
-	commentstyle = \color{green},
-	keywordstyle = \color{blue},
-	stringstyle = \color{red},
-	rulecolor = \color{black},
-	basicstyle = \small \ttfamily ,
-	breaklines = true,
-	numberstyle = \tiny,
-}
-
 % Define some useful dates
 \newdate{projectdate}{12}{10}{2024}
 \newdate{today}{\day}{\month}{\year}
+
+% Definisci lo stile per Java
+\lstset{
+	language=java,
+	tabsize=4,
+	showstringspaces=false,
+	commentstyle=\color{green},
+	keywordstyle=\color{blue},
+	stringstyle=\color{red},
+	rulecolor=\color{black},
+	basicstyle=\small\ttfamily,
+	breaklines=true,
+}
 
