--- a/report/contents/introduction.tex
+++ b/report/contents/introduction.tex
@@ -2,16 +2,7 @@
 
 In this assingment we are going to use the pattern detection tool \href{https://users.encs.concordia.ca/~nikolaos/pattern\_detection.html}{pattern4j} to automatically detect the usage of design patterns in a chosen open-source Java project and document the result in a report. The tool is able to scan Java bytecode and detect the usage of 13 design patterns.
 
-The assignment requires to choose a Java open-source project available on GitHub, which satisfies the following requirements:
-
-\begin{itemize}
-	\item At least 100 starts
-	\item At least 100 forks
-	\item At least 10 open issues
-	\item At least 50'000 lines of Java code (comments included)
-\end{itemize}
-
-\noindent In order to find a valid project, the GitHub search feature allows to filter repositories based on different criteria. For example, to find a Java project that satisfies the requirements listed above, the following query can be used:
+The assignment requires to choose a Java open-source project available on GitHub, which satisfies the following requirements: at least 100 stars, 100 forks, 10 open issues, and at least 50'000 lines of Java code (comments included). In order to find a valid project, the GitHub search feature allows to filter repositories based on different criteria. For example, to find a Java project that satisfies the requirements listed above, the following query can be used:
 
 \begin{verbatim}
   stars:>100 forks:>100 language:java
