--- a/report/template.sty
+++ b/report/template.sty
@@ -30,6 +30,7 @@
 % Define some useful dates
 \newdate{projectdate}{12}{10}{2024}
 \newdate{today}{\day}{\month}{\year}
+\newdate{caffeinerelease}{4}{12}{2004}
 
 % Definisci lo stile per Java
 \lstset{
